feat: upgrade to Spring Boot 3.3.1, Java from 17 to 21, get rid of Lombok, improve Java code